# downforeveryone

./: .coveragerc  .editorconfig  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  README.rst  mypy.ini  pyproject.toml  pytest.ini  renovate.json  renovate.json5  ruff.toml  setup.cfg
.circleci/: cc-test-reporter.sha256sum  config.yml
.github/: dependabot.yml
.github/workflows/: main.yml
downforeveryone/: __init__.py  cli.py  constants.py  isup.py  useragents.json  useragents.py
isup/: cli.py  isup.py
tests/: test_cli.py  test_isup.py  test_useragents.py
tests/test_cli/: test_cli.py  test_version.py
tests/test_isup/: conftest.py  test_handle_response.py  test_is_it_up.py  test_isup.py  test_main.py  test_query_url.py  test_url_join.py
tests/test_useragents/: test_useragents.py
