[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "downforeveryone"
version = "1.0.1"
description = "checks if a website is really down via isup.me"
authors = [ "Ryan Delaney <ryan.patrick.delaney@protonmail.com>",]
readme = "README.rst"
repository = "https://github.com/rpdelaney/downforeveryone"
homepage = "https://pypi.org/project/downforeveryone"
classifiers = [ "Environment :: Console", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3 :: Only",]

[tool.black]
line-length = 79
target_version = [ "py38",]

[tool.isort]
color_output = true
combine_star = true
group_by_package = true
indent = "    "
multi_line_output = 3
remove_redundant_aliases = true
skip_gitignore = true
use_parentheses = true
include_trailing_comma = true  # this prevents isort from fighting with black

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = "21.6b0"
cohesion = "^1.0.0"
flake8 = "^4.0"
flake8-annotations-complexity = "^0.0.6"
flake8-breakpoint = "^1.1"
flake8-bugbear = "^22.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-docstrings = "^1.6"
flake8-eradicate = "^1.2.0"
flake8-fixme = "^1.1.1"
flake8-pytest-style = "^1.5.1"
flake8-simplify = "^0.14.2"
mock = "^4.0"
mypy = "^0.931"
pytest = "^6.2"
pytest-cov = "^3.0"
pytest-icdiff = "^0.5"
pytest-mock = "^3.6"
responses = "^0.17.0"
semver = "^2.13.0"
toml = "^0.10.2"
types-requests = "^2.25.11"
types-toml = "^0.10.1"

[tool.poetry.scripts]
isup = "downforeveryone.isup:main"

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "--cov=downforeveryone --strict-markers --strict-config"
filterwarnings = ["error"]
xfail_strict = true
mock_use_standalone_module = true

[tool.poetry.dev-dependencies.isort]
version = "^5.4"
extras = [ "pyproject",]
