[build-system]
requires = [ "poetry>=1.8.0",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "downforeveryone"
version = "1.0.7"
description = "checks if a website is really down via isup.me"
authors = [ "Ryan Delaney <ryan.patrick.delaney@protonmail.com>",]
readme = "README.rst"
repository = "https://github.com/rpdelaney/downforeveryone"
homepage = "https://pypi.org/project/downforeveryone"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
requests = "^2.22"

[tool.poetry.group.dev.dependencies]
cohesion = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-icdiff = "*"
pytest-mock = "*"
responses = "*"
ruff = "*"
semver = "*"
toml = "*"
types-requests = "*"
types-toml = "*"

[tool.poetry.scripts]
isup = "downforeveryone.isup:main"

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "--cov=downforeveryone --strict-markers --strict-config"
filterwarnings = ["error"]
xfail_strict = true
mock_use_standalone_module = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true

# definitions
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

# optionals
no_implicit_optional = true
strict_optional = true

# imports
ignore_missing_imports = true

warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

strict_equality = true

# error formating
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ".venv.*"
ignore_errors = true
